# list-files

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/alphabet_filelist/: cli.py  filelist.py
